# raytracer

./: .gitignore  CMakeLists.txt  README.md
source-code/: MeshFileExporter.cpp  Ray.h  RayBouncer.h  RayIntensityCalculator.cpp  RayIntensityCalculator.h  SystemSpecificConstants.h  Triangle.cpp  Triangle.h  TriangleCollection.h  main.cpp
source-code/Export/: AllShapes.txt  HalfBacklitSphere.txt  HalfEmissiveTriangle.txt
source-code/Geometry/: Mesh.cpp  Mesh.h  MeshCollection.cpp  MeshCollection.h  MeshGenerator.cpp  MeshGenerator.h  MeshTransformer.cpp  MeshTransformer.h  Triangle.cpp  Triangle.h  TriangleCollection.cpp  TriangleCollection.h
source-code/Materials/: DiffuseMaterial.cpp  DiffuseMaterial.h  EmissiveMaterial.cpp  EmissiveMaterial.h  Material.h  ReflectiveMaterial.cpp  ReflectiveMaterial.h
source-code/MeshColIectionImporter/: MeshCollectionCreatorFromString.cpp  MeshCollectionCreatorFromString.h  MeshCollectionFileReader.cpp  MeshCollectionFileReader.h  MeshCreatorFromString.cpp  MeshCreatorFromString.h
source-code/MeshCollectionExporter/: ExportStrings.h  MeshCollectionStringCreator.cpp  MeshCollectionStringCreator.h  MeshStringCreator.cpp  MeshStringCreator.h
source-code/MeshCollectionImporter/: MeshCollectionCreatorFromString.cpp  MeshCollectionCreatorFromString.h  MeshCollectionFromFileReader.cpp  MeshCollectionFromFileReader.h  MeshCreatorFromString.cpp  MeshCreatorFromString.h
source-code/MeshExporter/: MaterialsExportNames.h  MeshExporter.cpp
source-code/RayUtils/: Ray.cpp  Ray.h  RayBouncer.cpp  RayBouncer.h  RayIntensityCalculator.cpp  RayIntensityCalculator.h
source-code/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  World.cpp  World.h
source-code/World/: World.h  WorldConstantIntensity.cpp  WorldConstantIntensity.h  WorldHdri.cpp  WorldHdri.h
source-code/output/: python_utils.py  result.txt
source-code/util/: HalveUnitSphereVectorGenerator.cpp  HalveUnitSphereVectorGenerator.h  Matrix3x3.cpp  Matrix3x3.h  MatrixUtils.cpp  MatrixUtils.h  Picture.cpp  Picture.h  RandomUtils.cpp  RandomUtils.h  Vector3D.cpp  Vector3D.h
